--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ Fork the repo from here <a href= "https://github.com/MozLNMIIT/mozlnmiit.github.
  	<td> Sagar Chandra Agarwal</td>
         <td><a href="mailto:atomsagar@gmail.com">atomsagar@gmail.com</a>
 	</tr>
+<tr>
+        <td>2</td>
+ 	<td> Naaz Khan</td>
+        <td><a href="naazkhanamf@gmail.com">naazkhanamf@gmail.com</a>
+	</tr>
     </table>
   </p>
 </body>
